--- a/pages/books.html
+++ b/pages/books.html
@@ -3,25 +3,327 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Rejoice Institute House | Books</title>
-    <!-- Link to our main stylesheet (notice the path goes up one level) -->
-    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* ===== BOOKS PAGE SPECIFIC STYLES ===== */
+        :root {
+            --primary-white: #FFFFFF;
+            --rich-black: #1A1A1A;
+            --warm-gold: #D4AF37;
+            --earth-brown: #8B4513;
+            --light-beige: #F5F5DC;
+            --soft-cream: #FDF5E6;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: var(--primary-white);
+            color: var(--rich-black);
+            line-height: 1.6;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        /* ===== HEADER & NAVIGATION ===== */
+        header {
+            background: var(--primary-white);
+            padding: 1rem 0;
+            border-bottom: 1px solid var(--light-beige);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+        }
+
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+
+        .logo-container {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .logo-img {
+            width: 50px;
+            height: 50px;
+            background: var(--warm-gold);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: var(--primary-white);
+            font-weight: bold;
+            font-size: 1.2rem;
+        }
+
+        .logo a {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: var(--rich-black);
+            text-decoration: none;
+        }
+
+        .nav-links {
+            display: flex;
+            list-style: none;
+            gap: 2rem;
+            flex-wrap: wrap;
+        }
+
+        .nav-links a {
+            font-family: 'Inter', sans-serif;
+            font-weight: 500;
+            color: var(--rich-black);
+            text-decoration: none;
+            transition: color 0.3s ease;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+        }
+
+        .nav-links a:hover {
+            color: var(--warm-gold);
+            background: var(--soft-cream);
+        }
+
+        .auth-buttons {
+            display: flex;
+            gap: 1rem;
+        }
+
+        .btn {
+            padding: 0.75rem 1.5rem;
+            border: none;
+            border-radius: 5px;
+            font-family: 'Inter', sans-serif;
+            font-weight: 500;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            cursor: pointer;
+            display: inline-block;
+            text-align: center;
+        }
+
+        .btn-login {
+            background: transparent;
+            color: var(--earth-brown);
+            border: 2px solid var(--earth-brown);
+        }
+
+        .btn-register {
+            background: var(--warm-gold);
+            color: var(--rich-black);
+        }
+
+        .btn-sage {
+            background: var(--earth-brown);
+            color: var(--primary-white);
+            padding: 0.5rem 1rem;
+            font-size: 0.9rem;
+        }
+
+        .btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
+
+        /* ===== PAGE HEADER ===== */
+        .page-header {
+            text-align: center;
+            padding: 4rem 0 2rem;
+            background: linear-gradient(135deg, var(--soft-cream) 0%, var(--primary-white) 100%);
+        }
+
+        .page-header h1 {
+            font-family: 'Playfair Display', serif;
+            font-size: 3rem;
+            font-weight: 700;
+            margin-bottom: 1rem;
+            color: var(--rich-black);
+        }
+
+        .page-header p {
+            font-size: 1.2rem;
+            max-width: 600px;
+            margin: 0 auto;
+            color: var(--rich-black);
+            opacity: 0.9;
+        }
+
+        /* ===== BOOKS GRID ===== */
+        .books-grid {
+            padding: 4rem 0;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 2rem;
+        }
+
+        .book-card {
+            background: var(--primary-white);
+            border-radius: 12px;
+            border: 1px solid var(--light-beige);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            overflow: hidden;
+        }
+
+        .book-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(212, 175, 55, 0.15);
+        }
+
+        .book-cover {
+            height: 300px;
+            background: var(--soft-cream);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+        }
+
+        .book-cover img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .empty-book-cover {
+            height: 300px;
+            background: var(--light-beige);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: var(--earth-brown);
+        }
+
+        .empty-book-icon {
+            font-size: 4rem;
+            margin-bottom: 1rem;
+            opacity: 0.7;
+        }
+
+        .empty-book-text {
+            font-size: 1rem;
+            font-weight: 500;
+            text-align: center;
+        }
+
+        .book-info {
+            padding: 1.5rem;
+        }
+
+        .book-info h3 {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.3rem;
+            margin-bottom: 0.5rem;
+            color: var(--rich-black);
+        }
+
+        .author {
+            color: var(--earth-brown);
+            font-weight: 500;
+            margin-bottom: 0.5rem;
+            font-size: 0.95rem;
+        }
+
+        .genre {
+            color: var(--rich-black);
+            opacity: 0.7;
+            margin-bottom: 1rem;
+            font-size: 0.9rem;
+        }
+
+        .book-actions {
+            display: flex;
+            gap: 0.5rem;
+        }
+
+        /* ===== FOOTER ===== */
+        footer {
+            background: var(--rich-black);
+            color: var(--primary-white);
+            padding: 2rem 0;
+            text-align: center;
+        }
+
+        /* ===== RESPONSIVE DESIGN ===== */
+        @media (max-width: 768px) {
+            nav {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            .nav-links {
+                gap: 1rem;
+            }
+
+            .page-header h1 {
+                font-size: 2.2rem;
+            }
+
+            .books-grid {
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                gap: 1.5rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .nav-links {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .auth-buttons {
+                flex-direction: column;
+                width: 100%;
+            }
+
+            .btn {
+                text-align: center;
+            }
+
+            .books-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- Header & Navigation -->
     <header>
         <div class="container">
             <nav>
-                <div class="logo">
-                    <a href="../index.html">REJOICE INSTITUTE HOUSE</a>
+                <div class="logo-container">
+                    <div class="logo-img">RIH</div>
+                    <div class="logo">
+                        <a href="index.html">REJOICE INSTITUTE HOUSE</a>
+                    </div>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="books.html">Books</a></li>
                     <li><a href="hub.html">Hub</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="authors.html">Authors & Creatives</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li><a href="register.html">Register</a></li>
                 </ul>
                 <div class="auth-buttons">
                     <a href="login.html" class="btn btn-login">Login</a>
@@ -32,57 +334,103 @@
     </header>
 
     <!-- Main Books Content -->
-    <main class="container">
+    <main>
         <section class="page-header">
-            <h1>Our Collection</h1>
-            <p>Discover captivating stories and thought-provoking works from our talented authors.</p>
+            <div class="container">
+                <h1>Our Collection</h1>
+                <p>Discover captivating stories and thought-provoking works from our talented authors.</p>
+            </div>
         </section>
 
-        <!-- Books Grid Section with Online Images -->
-<section class="books-grid">
-    <!-- Book 1 -->
-    <div class="book-card">
-        <div class="book-cover">
-            <img src="https://github.com/RejoiceInstituteHouse/RejoiceInstituteHouse/blob/main/Words-of-Insight-cover.jpg" alt="Words of Insight Book Cover">
-        </div>
-        <div class="book-info">
-            <h3>Words of Insight</h3>
-            <p class="author">by Promise Khosa & Jazzman Rikhotso</p>
-            <p class="genre">Cultural Poetry · 2023</p>
-            <div class="book-actions">
-                <button class="btn btn-sage">Read More</button>
+        <!-- Books Grid Section -->
+        <section class="books-grid container">
+            <!-- Book 1 - Words of Insight -->
+            <div class="book-card">
+                <div class="book-cover">
+                    <img src="https://raw.githubusercontent.com/RejoiceInstituteHouse/RejoiceInstituteHouse/main/Words-of-Insight-cover.jpg" alt="Words of Insight Book Cover" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'empty-book-cover\'><div class=\'empty-book-icon\'>📖</div><div class=\'empty-book-text\'>Cover Image</div></div>';">
+                </div>
+                <div class="book-info">
+                    <h3>Words of Insight</h3>
+                    <p class="author">by Promise Khosa & Jazzman Rikhotso</p>
+                    <p class="genre">Cultural Poetry · 2023</p>
+                    <div class="book-actions">
+                        <button class="btn btn-sage">Read More</button>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 
-    <!-- Book 2 -->
-    <div class="book-card">
-        <div class="book-cover">
-            <img src="https://images.unsplash.com/photo-1554757380-2fb69b9ca2e9?w=400&h=600&fit=crop" alt="Urban Legends Book Cover">
-        </div>
-        <div class="book-info">
-            <h3>Zoe</h3>
-            <p class="author">by *****</p>
-            <p class="genre">Mystery · 2024</p>
-            <div class="book-actions">
-                <button class="btn btn-sage">Read More</button>
+            <!-- Book 2 - Zoe -->
+            <div class="book-card">
+                <div class="book-cover">
+                    <img src="https://images.unsplash.com/photo-1554757380-2fb69b9ca2e9?w=400&h=600&fit=crop" alt="Zoe Book Cover" onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'empty-book-cover\'><div class=\'empty-book-icon\'>📖</div><div class=\'empty-book-text\'>Cover Image</div></div>';">
+                </div>
+                <div class="book-info">
+                    <h3>Zoe</h3>
+                    <p class="author">by *****</p>
+                    <p class="genre">Mystery · 2024</p>
+                    <div class="book-actions">
+                        <button class="btn btn-sage">Read More</button>
+                    </div>
+                </div>
             </div>
-        </div>
 
-    </section>
-</main>
+            <!-- Book 3 - Empty Slot 1 -->
+            <div class="book-card">
+                <div class="empty-book-cover">
+                    <div class="empty-book-icon">📚</div>
+                    <div class="empty-book-text">New Book Coming Soon</div>
+                </div>
+                <div class="book-info">
+                    <h3>Future Release</h3>
+                    <p class="author">by New Author</p>
+                    <p class="genre">Genre · 2024</p>
+                    <div class="book-actions">
+                        <button class="btn btn-sage">Coming Soon</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Book 4 - Empty Slot 2 -->
+            <div class="book-card">
+                <div class="empty-book-cover">
+                    <div class="empty-book-icon">📚</div>
+                    <div class="empty-book-text">New Book Coming Soon</div>
+                </div>
+                <div class="book-info">
+                    <h3>Future Release</h3>
+                    <p class="author">by New Author</p>
+                    <p class="genre">Genre · 2024</p>
+                    <div class="book-actions">
+                        <button class="btn btn-sage">Coming Soon</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Book 5 - Empty Slot 3 -->
+            <div class="book-card">
+                <div class="empty-book-cover">
+                    <div class="empty-book-icon">📚</div>
+                    <div class="empty-book-text">New Book Coming Soon</div>
+                </div>
+                <div class="book-info">
+                    <h3>Future Release</h3>
+                    <p class="author">by New Author</p>
+                    <p class="genre">Genre · 2024</p>
+                    <div class="book-actions">
+                        <button class="btn btn-sage">Coming Soon</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2023 Rejoice Institute House. All rights reserved.</p>
+            <p>&copy; 2025 Rejoice Institute House. All rights reserved.</p>
         </div>
     </footer>
-    <!-- Add these BEFORE your script.js -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-<script src="firebase-config.js"></script>
-<script src="script.js"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
