--- a/admin.html
+++ b/admin.html
@@ -292,7 +292,7 @@
                 <button type="submit" class="btn btn-full">Login to Portal</button>
                 
                 <div class="form-help">
-                    Don't have an account? <a href="/signup.html" style="color: var(--earth-brown);">Sign up here</a>
+                    Don't have an account? Please contact administrator for access.
                 </div>
             </form>
             <div id="loginMessage"></div>
@@ -362,8 +362,8 @@
                     • Update your profile
                 </div>
                 
-                <a href="/books.html" class="btn">Browse eBooks</a>
-                <a href="/profile.html" class="btn btn-secondary">My Profile</a>
+                <a href="/" class="btn">Browse eBooks</a>
+                <a href="/" class="btn btn-secondary">Back to Home</a>
             </div>
         </div>
 
