--- a/index.html
+++ b/index.html
@@ -321,20 +321,21 @@
 <body>
     <!-- Header & Navigation -->
     <header>
-        <nav>
+        <nav class="container">
             <div class="logo">
-                <a href="/">Rejoice Institute</a>
+                <a href="index.html">Rejoice Institute</a>
             </div>
             <ul class="nav-links">
-                <li><a href="/">Home</a></li>
-                <li><a href="/#featured">eBooks</a></li>
-                <li><a href="/#about">About</a></li>
-                <li><a href="/#contact">Contact</a></li>
-                <li><a href="/admin.html">Admin Login</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="books.html">Books</a></li>
+                <li><a href="hub.html">Hub</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="register.html">Register</a></li>
             </ul>
              <div class="auth-buttons">
-                <a href="/admin.html" class="btn btn-login">Login</a>
-                <a href="/admin.html" class="btn btn-register">Get Started</a>
+                <a href="login.html" class="btn btn-login">Login</a>
+                <a href="register.html" class="btn btn-register">Get Started</a>
             </div>
         </nav>
     </header>
@@ -387,7 +388,7 @@
         <div class="container">
             <h2>Join Our Reading Community</h2>
             <p>Become part of a vibrant network of readers who celebrate the transformative power of storytelling and shared literary experiences.</p>
-            <a href="register.html" class="btn btn-register">Create Your Account</a>
+            <a href="register.html" class="btn">Create Your Account</a>
         </div>
     </section>
 
